# attnres-exp

./: .gitignore  README.md  modal_train.py  pyproject.toml
analysis/: fetch_value_residual.py  fetch_wandb.py  plot_gates.py
analyze/: export_routing_data.py  extract_depth_attention.py  extract_dynamics.py  fetch_value_residual.py  fetch_wandb.py  plot_block_routing.py  plot_boundaries.py  plot_boundary_annotated.py  plot_depth_heatmaps.py  plot_dynamics.py  plot_lambda_values.py  plot_loss_curves.py  plot_per_token.py  plot_query_vectors.py  plot_token_routing.py  validate_figures.py
nanoGPT/: model.py  model_attnres.py  model_moe.py  train.py
nanoGPT/config/: train_adaptive_boundaries.py  train_attnres_baseline.py  train_attnres_block.py  train_attnres_full.py  train_gated_blocks.py  train_moe_attnres.py  train_moe_baseline.py  train_value_residual.py  train_value_residual_only.py
tests/: test_adaptive_boundaries.py  test_gated_blocks.py  test_model_attnres.py  test_model_integration.py  test_moe.py  test_value_residual.py
viz/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
viz/src/: CodeRouting.tsx  Root.tsx  routing_data.json
