[project]
name = "attnres-exp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
